@@ -56,3 +56,49 @@ jar {
       '*'
   }
 }
+
+test {
+  useJUnit {
+    excludeCategories 'org.asciidoctor.categories.Polluted'
+  }
+}
+
+task pollutedTest(type: Test) {
+  useJUnit {
+    includeCategories 'org.asciidoctor.categories.Polluted'
+  }
+  forkEvery = 10
+  minHeapSize = '128m'
+  maxHeapSize = '1024m'
+  if (JavaVersion.current().isJava8Compatible()) {
+    jvmArgs '-XX:-UseGCOverheadLimit'
+  }
+  else {
+    jvmArgs '-XX:MaxPermSize=256m', '-XX:-UseGCOverheadLimit'
+  }
+
+  environment 'GEM_PATH', '/some/path'
+  environment 'GEM_HOME', '/some/other/path'
+
+  testLogging {
+    // events 'passed', 'failed', 'skipped', 'standard_out', 'standard_error'
+    // events 'standard_out', 'standard_error'
+    afterSuite { desc, result ->
+      if (!desc.parent && logger.infoEnabled) {
+        logger.info "Test results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
+      }
+    }
+  }
+
+  reports {
+    html {
+      destination file("$buildDir/reports/pollutedTest")
+    }
+    junitXml {
+      destination file("$buildDir/pollutedTest-result")
+    }
+  }
+}
+
+test.dependsOn pollutedTest
+
